@@ -1,4 +1,5 @@
 ==2011-07==
+* Implemented device replacement by dragging
 * Merged available ports with other groups
 
 ==2011-06==
